echo/base/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      konghq.com/strip-path: "true"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"konghq.com/strip-path":"true"},"name":"echo","namespace":"echo"},"spec":{"ingressClassName":"kong","rules":[{"host":"kong.abu7midan.com","http":{"paths":[{"backend":{"service":{"name":"echo","port":{"number":80}}},"path":"/echo","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-02-11T10:34:26Z"
    generation: 1
    name: echo
    namespace: echo
    resourceVersion: "1565177"
    uid: a2bbe59c-596f-436c-99ad-85e0ce2f8014
  spec:
    ingressClassName: kong
    rules:
    - host: kong.abu7midan.com
      http:
        paths:
        - backend:
            service:
              name: echo
              port:
                number: 80
          path: /echo
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
